# peb

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.txt  pyproject.toml
peb/: data.py  open_ai.py  telegram_bot.py
tests/: test_telegram_bot.py
